[gd_scene load_steps=4 format=3 uid="uid://4lwrm206g05t"]

[ext_resource type="FontFile" uid="uid://dtfprycdg5rj8" path="res://assets/Fonts/vcrosdmonorusbyd.ttf" id="1_qppth"]
[ext_resource type="Script" path="res://game/userInterface/item_description.gd" id="1_wpm44"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bb1ny"]
content_margin_left = 15.0
content_margin_top = 20.0
content_margin_right = 15.0
content_margin_bottom = 20.0
bg_color = Color(0.235294, 0.290196, 0.301961, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.192157, 0.192157, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.27451)
shadow_size = 10

[node name="ItemDescription" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wpm44")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_bb1ny")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemNameLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_qppth")
text = "Предметово Словцо"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="DescriptionLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_qppth")
text = "Описание"

[node name="DescriptionTextLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(543.895, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_qppth")
text = "Этот предмет был создан великими челами с горы Нипучухту.
Его делали несколькими поколениями, а потом он попал к 
тебе, мда."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="DurabilityLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_qppth")
text = "Максимальная прочность
 предмета:"
horizontal_alignment = 1

[node name="DurabilityTextLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_qppth")
text = "6"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PropertyLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_qppth")
text = "Свойство при разрушении:"
horizontal_alignment = 1

[node name="PropertyTextLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_qppth")
text = "Мгновенно убивает всех на карте"
horizontal_alignment = 1
autowrap_mode = 2
